--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   width: 100px;
   height: 100px;
   color: #fff;
+  background-image: url('https://placeimg.com/400/400');
 }
 .wrap_all .image_container .list0 {
   background-position-x: 0px;
@@ -104,4 +105,4 @@
   text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
   padding: 1rem;
   display: none;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
